8 January 2007: Wouter
	- README text on interface configuration added.

2 January 2007: Wouter
	- Fixup accept() that could block due to already closed connection.
	  Made listen() nonblocking, ignores errcodes that indicate closed tcp.

29 January 2007: Mark
	- Handle the new CERT RDATA types defined in RFC 4398 (submitted
	  by Mans Nilsson).
	- Change nsd-notify retry timer from linear into exponential backoff
	  (submitted by Mans Nilsson).
	- Due to a small bug in a comparison statement, zonec would fail
	  on the parsing of unknown CERT types. This got triggered by the
	  first bugfix today, as that one shouldn't have been discovered in
	  the first place. Took the opportunity to sanitize two other
	  comparison statements related to strtol().
	
24 January 2007: Wouter
	- Tentative change to set UDP sockets nonblocking. Perhaps it 
	  helps Howard.

19 January 2007: Wouter
	- NSEC3 work. prehash printed only once with time taken to prepare.
	- prints are now only in DEBUG mode (except errors).
	- rr descriptor counts for NSEC3 updated, has an extra field flags.
	- now NSEC3PARAMs with flags!=0 are ignored, as per draft-09.
	- Fixed where only first NSEC3PARAM was properly detected.
	- Added tpkg in manual (because you need to compile with nsec3)
	  that performs the test queries from draft-09 and checks them.
	- Made tpkg to test NSEC3 parameter detection. NSD will skip any
	  NSEC3PARAMs that don't work until the first working one is found.
	  Also, this means unknown hash algorithms are simply ignored.
	  A zone that uses exclusively unknown hash algorithms for NSEC3
	  will give errors on loading (or after zone transfer) but NSD
	  will load and serve the zone (but no NSEC3s are returned).
	- added tpkg in manual to test parent side DS answers.
	  These follow a different code path than child side DS.
	- Will allow NSEC3s(and signatures) below a DNAME.
	- A query for an NSEC3 ownername will lead to DNAME redirection
	  as if the NSEC3 did not exist.