@@ -439,10 +439,11 @@ answer_notify (struct nsd* nsd, struct query *query)
 		pos = buffer_position(query->packet);
 		buffer_clear(query->packet);
 		buffer_set_position(query->packet, pos);
+		VERBOSITY(1, (LOG_INFO, "Notify received and accepted")); 
 		/* tsig is added in add_additional later (if needed) */
 		return QUERY_PROCESSED;
 	}
-	DEBUG(DEBUG_XFRD,1, (LOG_INFO, "got notify %s refused acl: %s %s",
+	VERBOSITY(1, (LOG_INFO, "got notify %s refused acl: %s %s",
 			dname_to_string(query->qname, NULL),
 			why?why->key_name:"no acl matches", 
 			why?why->ip_address_spec:"."));
